added connection to expo in expo image & .env explanations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,9 @@ services:
     build:
       context: .
       dockerfile: dockerfiles/expo.dockerfile
+      args:
+        - EXPO_USERNAME=$EXPO_USERNAME
+        - EXPO_PASSWORD=$EXPO_PASSWORD
     ports:
       - 19000:19000 
       - 19001:19001
