--- a/env/backend.public.env
+++ b/env/backend.public.env
@@ -1,3 +1,4 @@
+#CHANGE backend.public.env file name to backend.env
 DATABASE_DNS=mysql:host=mariadb;dbname=study_db;
 DATABASE_USER=study_user
 DATABASE_PASSWORD=secret
