backend: allowed cors for react  app

--- a/env/backend.public.env
+++ b/env/backend.public.env
@@ -2,3 +2,4 @@
 DATABASE_DNS=mysql:host=mariadb;dbname=study_db;
 DATABASE_USER=study_user
 DATABASE_PASSWORD=secret
+HOST_IP=<<YOUR_HOST_LOCAL_IP>>
