added register and login api

--- a/env/backend.public.env
+++ b/env/backend.public.env
@@ -2,4 +2,7 @@
 DATABASE_DNS=mysql:host=mariadb;dbname=study_db;
 DATABASE_USER=study_user
 DATABASE_PASSWORD=secret
-HOST_IP=<<YOUR_HOST_LOCAL_IP>>
+HOST_IP=YOUR_HOST_LOCAL_IP
+JWT_SECRET=YOUR_JWT_SECRET
+JWT_ISSUER=www.your-issuer-website.com
+JWT_AUDIENCE=www.your-audience-website.com
