--- a/env/expo.public.env
+++ b/env/expo.public.env
@@ -1,3 +1,3 @@
 #CHANGE expo.public.env file name to expo.env
 EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-REACT_NATIVE_PACKAGER_HOSTNAME=<<YOUR_HOST_LOCAL_IP>>
+REACT_NATIVE_PACKAGER_HOSTNAME=YOUR_HOST_LOCAL_IP
