--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,86 +1,90 @@
 version: '3.8'
 
 services:
+    server:
+        image: 'nginx:stable-alpine'
+        build:
+            context: .
+            dockerfile: dockerfiles/nginx.dockerfile
+        ports:
+            - 8000:80
+        volumes:
+            - ./src/backend:/var/www/html
+            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
+            - mariadb
 
-  server:
-    image: 'nginx:stable-alpine'
-    build:
-      context: .
-      dockerfile: dockerfiles/nginx.dockerfile
-    ports:
-      - 8000:80
-    volumes:
-      - ./src/backend:/var/www/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
-      - mariadb
+    api:
+        build:
+            context: .
+            dockerfile: dockerfiles/php.dockerfile
+        volumes:
+            - ./src/backend:/var/www/html
+        env_file:
+            - ./env/backend.env
 
-  api:
-    build:
-      context: .
-      dockerfile: dockerfiles/php.dockerfile
-    volumes:
-      - ./src/backend:/var/www/html
-    env_file:
-      - ./env/backend.env
+    mariadb:
+        image: mariadb
+        env_file:
+            - ./env/mariadb.env
+        volumes:
+            - database:/var/lib/mysql
 
-  mariadb:
-    image: mariadb
-    env_file:
-      - ./env/mariadb.env
-    volumes:
-      - database:/var/lib/mysql
+    frontend:
+        build:
+            context: .
+            dockerfile: dockerfiles/react.dockerfile
+        ports:
+            - '3000:3000'
+        volumes:
+            - /app/node_modules
+            - ./src/frontend:/app:ro
+        stdin_open: true
+        tty: true
+        depends_on:
+            - server
 
-  frontend:
-    build:
-      context: .
-      dockerfile: dockerfiles/react.dockerfile
-    ports:
-      - '3000:3000'
-    volumes:
-      - /app/node_modules
-      - ./src/frontend:/app:ro
-    stdin_open: true
-    tty: true
-    depends_on:
-      - server
+    mobile:
+        build:
+            context: .
+            dockerfile: dockerfiles/expo.dockerfile
+            args:
+                - EXPO_USERNAME=$EXPO_USERNAME
+                - EXPO_PASSWORD=$EXPO_PASSWORD
+        ports:
+            - 19000:19000
+            - 19001:19001
+            - 19002:19002
+        env_file:
+            - ./env/expo.env
+        volumes:
+            - /app/node_modules
+            - ./src/mobile:/app:ro
+            - ./src/mobile/.expo:/app/.expo
+        stdin_open: true
+        tty: true
+        depends_on:
+            - server
 
-  mobile:
-    build:
-      context: .
-      dockerfile: dockerfiles/expo.dockerfile
-      args:
-        - EXPO_USERNAME=$EXPO_USERNAME
-        - EXPO_PASSWORD=$EXPO_PASSWORD
-    ports:
-      - 19000:19000 
-      - 19001:19001
-      - 19002:19002
-    env_file:
-      - ./env/expo.env
-    volumes:
-      - /app/node_modules
-      - ./src/mobile:/app:ro
-      - ./src/mobile/.expo:/app/.expo
-    stdin_open: true
-    tty: true
-    depends_on:
-      - server
-
-  #FOR TYPESCRIPT LINTING DURING DEVELOPEMENT:
-  update_react_modules:
-    build:
-      context: .
-      dockerfile: dockerfiles/update_react_modules.dockerfile
-    volumes:
-      - ./src/frontend/node_modules:/app/node_modules
-  update_expo_modules:
-    build:
-      context: .
-      dockerfile: dockerfiles/update_expo_modules.dockerfile
-    volumes:
-      - ./src/mobile/node_modules:/app/node_modules
-
-volumes: 
-  database: {}
+    #FOR TYPESCRIPT LINTING DURING DEVELOPEMENT:
+    update_react_modules:
+        build:
+            context: .
+            dockerfile: dockerfiles/update_react_modules.dockerfile
+        volumes:
+            - ./src/frontend/node_modules:/app/node_modules
+    update_expo_modules:
+        build:
+            context: .
+            dockerfile: dockerfiles/update_expo_modules.dockerfile
+        volumes:
+            - ./src/mobile/node_modules:/app/node_modules
+    composer:
+        build:
+            context: .
+            dockerfile: dockerfiles/composer.dockerfile
+        volumes:
+            - ./src/backend:/var/www/html
+volumes:
+    database: {}
