--- a/src/mobile/package.json
+++ b/src/mobile/package.json
@@ -18,6 +18,7 @@
 		"@react-navigation/bottom-tabs": "^6.0.5",
 		"@react-navigation/native": "^6.0.2",
 		"@react-navigation/native-stack": "^6.1.0",
+		"@types/react-native-svg-charts": "^5.0.12",
 		"@types/react-syntax-highlighter": "^13.5.2",
 		"expo": "~44.0.0",
 		"expo-asset": "~8.4.4",
@@ -36,9 +37,11 @@
 		"react-native-gesture-handler": "^2.1.0",
 		"react-native-safe-area-context": "3.3.2",
 		"react-native-screens": "~3.10.1",
+		"react-native-svg-charts": "^5.4.0",
 		"react-native-syntax-highlighter": "^2.1.0",
 		"react-native-web": "0.17.1",
-		"react-syntax-highlighter": "^15.4.5"
+		"react-syntax-highlighter": "^15.4.5",
+		"expo-notifications": "~0.14.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
